--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -2,6 +2,7 @@ titre=Bank Clients Management
 home.titre=* Welcome in Bank Management *
 home.lienlisteclients=Clients List
 home.lienaddclient=Add a new client
+home.lienvershome=Home
 header.titre=Bank Management
 listeclients.titre=List of all clients
 detailclient.titre=Clients details
