--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,6 +2,7 @@ titre=Gestion clients banque
 home.titre=* Bienvenue dans Gestion Bancaire *
 home.lienlisteclients=Liste des Clients
 home.lienaddclient=Ajouter un nouveau client
+home.lienvershome=Accueil
 header.titre=Gestion Bancaire
 listeclients.titre=Liste de tous les clients
 detailclient.titre=Détails clients
