diverses modif affichage bootstrap

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,7 +5,7 @@ home.lienaddclient=Ajouter un nouveau client
 home.lienvershome=Accueil
 header.titre=Gestion Bancaire
 listeclients.titre=Liste de tous les clients
-detailclient.titre=Détails clients
+detailclient.titre=Dï¿½tails clients
 addclient.titre=Nouveau client
 client.nom=nom
 client.prenom=prenom
@@ -16,3 +16,5 @@ client.adresse.rue=rue
 client.adresse.codepostal=code postal
 client.adresse.ville=ville
 client.banque=banque
+bouton.creation=Crï¿½er
+bouton.modifier=Modifier
