--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -16,3 +16,5 @@ client.adresse.rue=street
 client.adresse.codepostal=postal code
 client.adresse.ville=city
 client.banque=bank
+bouton.creation=Create
+bouton.modifier=Update
